# gcf-go

./: CHANGELOG.md  README.md  ROADMAP.md  comprehension_test.go  conformance_test.go  conformance_v2_test.go  decode.go  decode_generic.go  decode_generic_test.go  decode_generic_v3.go  decode_helpers.go  delta.go  encode_helpers.go  fuzz_test.go  gcf  gcf.go  gcf_test.go  generic.go  generic_test.go  generic_v3.go  go.mod  orderedmap.go  packroot.go  packroot_test.go  roundtrip_test.go  scalar.go  session.go  stream.go  stream_generic.go  stream_generic_test.go  stream_test.go
.github/workflows/: ci.yml  release.yml
cmd/gcf/: main.go
eval/: INTERNAL-generic-eval.md  README.md  batch_test.go  comprehension_test.go  fixture_500_orders.json  generation_test.go  generic_comprehension_test.go  generic_generation_test.go  go.mod  go.sum
eval/results/artifacts/: opus-json-enumeration-failure.md
eval/results/comprehension/: haiku-4.5-run2.txt
eval/results/token-efficiency/: toon-benchmark-token-efficiency-2026-06-03.md
eval/results/v3/: SUMMARY.md
npm/: README.md  install.js  package.json
pypi/: README.md  pyproject.toml
pypi/gcf_cli/: __init__.py
testdata/fuzz/FuzzEncodeGeneric/: 46c8914b81568283  da0c9e07cde2d77b
