[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcf-cli"
version = "0.1.0"
description = "GCF CLI: token-optimized wire format for LLM tool responses. Encode, decode, stats."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Blackwell Systems" },
]
keywords = ["gcf", "llm", "mcp", "token-efficient", "cli", "wire-format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/blackwell-systems/gcf-go"
Specification = "https://github.com/blackwell-systems/gcf"

[project.scripts]
gcf = "gcf_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gcf_cli"]
